--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
 <h1>The form method="get" attribute</h1>
 
 <form action="/action_page.php" method="get" target="_blank">
-  <label for="fname">URL:</label>
+  <label for="input_url">URL:</label>
   <input type="text" id="input_url" name="input_url"><br><br>
   
   <input type="submit" value="Submit">
