* text boxes added

--- a/html/index.html
+++ b/html/index.html
@@ -6,12 +6,25 @@
 
 <form action="/action_page.php" method="get" target="_blank">
   <label for="input_url">URL:</label>
-  <input type="text" id="input_url" name="input_url"><br><br>
-  
+  <br>
+  <textarea id="input_url" name="input_url" rows="4" cols="50"></textarea>
+  <br/>
   <input type="submit" value="Submit">
 </form>
 
-<p>Submit if ready</p>
+<p></p>
+<label for="output_raw">Output Raw:</label>
+<br>
+<textarea id="output_raw" name="output_raw" rows="12" cols="50"></textarea>
+<br/>
+
+<p></p>
+<label for="output_processed">Output Processed:</label>
+<br>
+<textarea id="output_processed" name="output_processed" rows="12" cols="50"></textarea>
+<br/>
+
+
 
 
 
