--- a/html/index.html
+++ b/html/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>The form method="get" attribute</h1>
+<h1>The form method="POST" attribute</h1>
 
-<form action="/action_page.php" method="get" target="_blank">
+<form action="/action_page.php" method="POST" target="_blank">
   <label for="input_url">URL:</label>
   <br>
   <textarea id="input_url" name="input_url" rows="4" cols="50"></textarea>
